# ferrum

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md  ferrum.toml  infra.fe  package.json
ferrum-cli/: Cargo.toml  build.rs
ferrum-cli/src/: commands.rs  doctor.rs  main.rs  telemetry.rs  templates.rs  test_drive.rs
ferrum-core/: Cargo.toml
ferrum-core/src/: ai.rs  config.rs  cost.rs  drift.rs  engine.rs  error.rs  graph.rs  graph_export.rs  import.rs  lib.rs  load_balancer.rs  lock.rs  plan.rs  project_config.rs  provider.rs  refresh.rs  smoke_test.rs  system.rs  uid.rs  vault.rs
ferrum-core/src/config/: load_balancer.rs
ferrum-core/src/orchestration/: k8s.rs  mod.rs
ferrum-crypto/: Cargo.toml
ferrum-crypto/src/: error.rs  lib.rs
ferrum-gui/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
ferrum-gui/src-tauri/: Cargo.toml  tauri.conf.json
ferrum-gui/src-tauri/capabilities/: default.json
ferrum-gui/src-tauri/icons/: icon.icns
ferrum-gui/src-tauri/src/: lib.rs  main.rs  terminal.rs  vault.rs
ferrum-gui/src/app/: globals.css  layout.tsx  page.tsx
ferrum-gui/src/components/: DoctorPanel.tsx  InfrastructureGraph.tsx  PlanPanel.tsx  Sidebar.tsx  SmokeTestPanel.tsx  TerminalPanel.tsx  VaultPanel.tsx
ferrum-parser/: Cargo.toml
ferrum-parser/src/: ast.rs  error.rs  grammar.pest  lib.rs  parse.rs  schema_registry.rs  symbol.rs  types.rs
ferrum-provider-bridge/: Cargo.toml  build.rs
ferrum-provider-bridge/proto/: provider.proto
ferrum-provider-bridge/src/: client.rs  error.rs  executor.rs  lib.rs  pool.rs  schema.rs
ferrum-provider-bridge/src/plugin/: checksum.rs  handshake.rs  manager.rs  mod.rs  registry.rs
ferrum-provider-bridge/src/tfplugin/: client.rs  mod.rs
ferrum-resolver/: Cargo.toml
ferrum-resolver/src/: error.rs  graph.rs  lib.rs
ferrum-state/: Cargo.toml
ferrum-state/src/: crypto.rs  error.rs  lib.rs  resource.rs  state_file.rs
ferrum-telemetry/: Cargo.toml
ferrum-telemetry/src/: lib.rs
scripts/: install-linux.sh
