[workspace]
resolver = "2"
members = [
    "ferrum-core",
    "ferrum-state",
    "ferrum-cli",
    "ferrum-provider-bridge",
    "ferrum-gui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
authors = ["Roberto de Souza <rabbittrix@hotmail.com>"]
repository = "https://github.com/rabbittrix/ferrum"
description = "Next-generation Infrastructure as Code — faster, safer, smarter."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
petgraph = "0.7"
tonic = "0.12"
prost = "0.13"
async-trait = "0.1"
dirs = "6"
