[package]
name = "ferrum-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ferrum IaC engine — dependency graph, concurrency, resource lifecycle"

[dependencies]
ferrum-state = { path = "../ferrum-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
