[package]
name = "ferrum-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AES-256-GCM encryption for Ferrum state and vault"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
