[package]
name = "ferrum-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Strongly-typed .fe language parser for Ferrum"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pest = "2.8"
pest_derive = "2.8"

[dev-dependencies]
tempfile = "3"
