[package]
name = "ferrum-provider-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC bridge to Terraform-compatible Go providers"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
