[package]
name = "ferrum-provider-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC bridge to Terraform-compatible Go providers"

[lib]
doctest = false

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
dirs = { workspace = true }
dashmap = "6"
rmp-serde = "1"
futures = "0.3"
zip = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
