[package]
name = "ferrum-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Dependency resolution and execution ordering for Ferrum"

[dependencies]
ferrum-parser = { path = "../ferrum-parser" }
ferrum-state = { path = "../ferrum-state" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
tempfile = "3"
