[package]
name = "ferrum-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Anonymous install telemetry for Ferrum"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
dirs = { workspace = true }
chrono = { workspace = true }
